# blog

./: .env  Cargo.toml  sample.env
src/: api.rs  main.rs  routes.rs  state.rs  view.rs
src/common/: error.rs  mod.rs  paginator.rs  template.rs
templates/: base.html  login.html
