[package]
name = "blog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.3"
tokio = { version = "1.34.0", features = ["macros", "rt-multi-thread"] }
tracing = { version = "~0.1.40" } #  Application-level tracing for Rust.
tracing-subscriber = { version = "~0.3.18", features = ["env-filter"] } # Utilities for implementing and composing `tracing` subscribers.

serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4.23", features = ["serde"] }
serde_json = "1.0"
thiserror = "1.0.50"
dotenvy = "0.15.7"
sqlx = { version = "0.6", features = [ "runtime-async-std-native-tls", "postgres", "chrono" ] }
tower-http = { version = "0.5.0", features = ["auth", "trace"] }
anyhow = "1.0.79"

